Some more tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,17 @@ description: Open protocol for synchronized music experiences across devices.
 </h2>
 
 <p>
-  <i
-    >Sendspin is a work in progress. The name and spec are subject to change.</i
-  >
+  <i>Sendspin is a work in progress. The spec is subject to change.</i>
 </p>
 
 <p>
-  Sendspin is an open standard for synchronized music experience across multiple
-  devices and rooms. It enables speakers, lights, and screens to work together
-  to create a rich and immersive audio environment:
+  Sendspin is an open standard by the
+  <a href="https://www.openhomefoundation.org" target="_blank"
+    >Open Home Foundation</a
+  >
+  for synchronized music experience across multiple devices and rooms. It
+  enables speakers, lights, and screens to work together to create a rich and
+  immersive audio environment:
 </p>
 
 <ul>
@@ -38,7 +40,7 @@ description: Open protocol for synchronized music experiences across devices.
 
 <ul>
   <li>
-    Stream music via Sendspin using the beta version of
+    Stream music via Sendspin to any client using the beta version of
     <a href="https://www.music-assistant.io" target="_blank">Music Assistant</a>
     and play the stream in any browser or Google Cast-enabeld
     device<sup>1</sup>.
@@ -144,23 +146,23 @@ description: Open protocol for synchronized music experiences across devices.
 <h3>Why (yet another) new protocol?</h3>
 
 <p>
-  <b
-    >All existing audio standards are closed or focus on getting audio to play
-    on multiple speakers simultaneously.</b
-  >
+  <b>All major audio playing standards, like AirPlay and Cast, are closed.</b>
 </p>
 
 <p>
-  In the end, existing protocols focus solely on moving bytes around – getting
-  audio data from one device to another for synchronized playback.
+  We believe in a world where you, the user, are in control of your devices,
+  your data, <i>and your music</i>. Open standards are a key part of that
+  vision. Unfortunately, existing protocols for synchronized audio experiences
+  are proprietary and closed, making it difficult for developers to create
+  interoperable solutions and unleash the creativity of the community.
 </p>
 
 <p>
-  Sendspin takes a different approach by focusing on the music listening
-  experience itself. It takes a comprehensive look at what listening to audio
-  means and makes sure that all activities are covered – not just audio
-  playback, but also metadata distribution, visualization, and control across
-  all your devices.
+  Sendspin takes a different approach by focusing on the complete music
+  listening experience. It takes a comprehensive look at what listening to audio
+  entails and makes sure that all activities are covered: we started with
+  multi-room music playback, and added metadata distribution, music
+  visualization, and control across all your devices.
 </p>
 
 <h3>More Reading</h3>
