Update S3 box config

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,9 @@ description: Open protocol for synchronized music experiences across devices.
   </li>
   <li>
     Show album art and control your music from ESPHome using
-    <a href="https://github.com/esphome/esphome/pull/12284" target="_blank"
+    <a
+      href="https://gist.github.com/kahrendt/a86b20601f02df9f3861a48cedc98e17"
+      target="_blank"
       >this example configuration</a
     >
   </li>
