Put Go back on the frontpage
Removed outdated comment and updated link structure.

--- a/src/index.html
+++ b/src/index.html
@@ -70,18 +70,12 @@ description: Open protocol for synchronized music experiences across devices.
       >sendspin-cli</a
     >
   </li>
-  <!-- Not updated for latest spec yet - https://github.com/Sendspin/sendspin-go/pull/5
   <li>
-    Run a
-    <a href="https://github.com/Sendspin/sendspin-go/releases"
-      >command-line server or client</a
-    >
-    powered by
-    <a href="https://github.com/Sendspin/sendspin-go" target="_blank"
+    Run a command-line server or client powered by
+    <a href="https://github.com/Sendspin/sendspin-go/releases" target="_blank"
       >sendspin-go</a
     >
   </li>
-  -->
 </ul>
 
 <p>
