Add URLs to wikipedia for AirPlay and Google Cast
Add URLs to wikipedia as links for AirPlay and Google Cast. Also note that it need to read "Google Cast" and not just "Cast".

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,11 @@ description: Open protocol for synchronized music experiences across devices.
 <h3>Why (yet another) new protocol?</h3>
 
 <p>
-  <b>Major audio-playback standards like AirPlay and Cast are closed.</b>
+  <b>Major audio-playback standards like <a href="https://en.wikipedia.org/wiki/AirPlay" target="_blank"
+    >AirPlay</a
+  > and   <a href="https://en.wikipedia.org/wiki/Google_Cast" target="_blank"
+    >Google Cast</a
+  > are closed and proprietary.</b>
 </p>
 
 <p>
